Assignment7/.metadata/.plugins/org.eclipse.cdt.ui/EXTI_FUNCTIONALITY.build.log
12:55:20 **** Incremental Build of configuration Debug for project EXTI_FUNCTIONALITY ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:161:13: error: invalid storage class for function 'MX_GPIO_Init'
  161 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:221:1: error: expected declaration or statement at end of input
  221 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:51:13: warning: 'MX_GPIO_Init' used but never defined
   51 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:212:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  212 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:198:6: warning: 'HAL_GPIO_EXTI_Callback' defined but not used [-Wunused-function]
  198 | void HAL_GPIO_EXTI_Callback(uint16_t GPIO_Pin)
      |      ^~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:161:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  161 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:114:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  114 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

12:55:20 Build Failed. 3 errors, 5 warnings. (took 449ms)

